--- a/neihan/res/layout/item_essay.xml
+++ b/neihan/res/layout/item_essay.xml
@@ -76,6 +76,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:button="@drawable/item_digg_bg"
+                android:focusable="false"
                 android:text="123" />
         </LinearLayout>
 
@@ -95,6 +96,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:button="@drawable/item_bury_bg"
+                android:focusable="false"
                 android:text="123" />
         </LinearLayout>
 
@@ -134,6 +136,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:focusable="false"
                 android:src="@drawable/item_more_bg" />
         </LinearLayout>
     </LinearLayout>
