--- a/neihan/res/layout/item_essay.xml
+++ b/neihan/res/layout/item_essay.xml
@@ -12,18 +12,21 @@
         <ImageView
             android:id="@+id/item_profile_image"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:focusable="false" />
 
         <TextView
             android:id="@+id/item_profile_nick"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:focusable="false" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/item_content"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:focusable="false" />
 
     <LinearLayout
         android:id="@+id/item_image_container"
@@ -35,7 +38,8 @@
             android:id="@+id/item_image_downLoad_progress"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
-            android:layout_height="2dp" />
+            android:layout_height="2dp"
+            android:focusable="false" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -46,6 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:focusable="false"
                 android:scaleType="center"
                 android:src="@drawable/ic_launcher" />
 
@@ -54,6 +59,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:background="@drawable/gif_btn_bg"
+                android:focusable="false"
                 android:gravity="center"
                 android:text="GIF" />
         </FrameLayout>
@@ -117,6 +123,7 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:drawableLeft="@drawable/item_comment_bg"
+                android:focusable="false"
                 android:text="123" />
         </LinearLayout>
 
